# kindle-to-anki

./: .gitignore  CONTRIBUTING.md  anki_connect.py  anki_note.py  batch_update_ma.py  build_release.bat  copy_vocab.bat  kindle_to_anki.bat  kindle_to_anki.py  llm_enrichment.py  morphological_analyzer.py  pyproject.toml  readme.md  readme.txt  setup.py  test_ma_llm.py
.github/workflows/: release.yml
anki/: anki_connect.py  anki_note.py
collocation/: collocation.py  collocation_cache.py  collocation_llm.py
collocation/providers/: collocation_llm.py
data/config/: config.sample.json  models.yaml
language/: language_helper.py
lexical_unit_identification/: lexical_unit_identification.py  ma.py
lexical_unit_identification/providers/: lui_llm.py  lui_polish_hybrid.py  ma_llm.py
llm/: llm_helper.py
ma/: ma.py  ma_cache.py  ma_polish_hybrid.py  ma_polish_hybrid_llm.py  morphological_analyzer.py  polish_ma.py  polish_ma_llm.py  polish_ma_sgjp_helper.py
ma/pl_en/: ma_polish_hybrid.py  ma_polish_hybrid_llm.py
ma/providers/: ma_llm.py  ma_polish_hybrid.py
metadata/: metdata_manager.py
pruning/: pruning.py
src/kindle_to_anki/: __init__.py  batch_update_ma.py  copy_vocab.bat  main.py  (+3 more)
src/kindle_to_anki.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  run_all_tests.py
translation/: context_translation.py  polish_translator.py  polish_translator_llm.py  polish_translator_local.py  translation.py  translation_cache.py  translator_llm.py
wsd/: llm_enrichment.py  wsd.py  wsd_cache.py  wsd_llm.py  wsd_llm_provider.py
(+229 files in other folders)
