[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kindle_to_anki"
version = "0.2.5"
requires-python = ">=3.9"
dependencies = [
    "customtkinter",
    "google-genai",
    "openai",
    "pycountry",
    "pyyaml",
    "requests",
    "thefuzz",
    "tiktoken",
    "tkinterdnd2",
]

[tool.setuptools.packages.find]
where = ["src"]
